--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -25,5 +25,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/force-adverse/3proxy:latest
+          tags: ghcr.io/force-adverse/3proxy-docker:latest
           file: ./Dockerfile
