auto-build on Dockerfile update

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,6 +2,10 @@ name: Build Docker image
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      # build again on modified Dockerfile
+      - Dockerfile
 
 env:
   PLATFORMS: "linux/amd64, linux/arm64"
