feat: add arm64 support

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -29,5 +29,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          platforms: ${{env.PLATFORMS}}
           tags: ghcr.io/force-adverse/3proxy-docker:latest
           file: ./Dockerfile
